--- a/styles/base.css
+++ b/styles/base.css
@@ -37,6 +37,18 @@ select {
   color: var(--color-dark-2);
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 :root {
   --color-bg: #f4f4f4;
   --color-dark-1: #111;
